--- a/US_repatriation.ipynb
+++ b/US_repatriation.ipynb
@@ -16,7 +16,7 @@
     "Assessment 2  \n",
     "Student number: 24000114067\n",
     "\n",
-    "Access notebook online here: TODO\n",
+    "Access notebook online [here](https://github.com/noah-art3mis/stats-assignment-2)\n",
     "\n",
     "PDF generated using [nbconvert](https://nbconvert.readthedocs.io/en/latest/index.html)\n"
    ]
@@ -32,89 +32,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trump won the US election a few days ago. A surprising contingent of black and latino us citizens have voted for him. The idea being floated around regards the fact that while the biden presidency was better for the economy, people do not feel the economy.\n",
+    "Less than a month ago, Trump won the United States election. A surprising contingent of black and latino citizens voted for him. The explanation seems to be the economy - prices are rising and the ones in power happen to be the Democrats, and so they are being blamed for it ([(Debusmann, Halpert and Wendling, 2024](https://www.bbc.co.uk/news/articles/cze3yr77j9wo)).\n",
     "\n",
-    "I have been told the unlikely idea that the democrats deporting more than republicans - and this motivating latinos voting for trump even though that sounds contrary to their interests -. this would explain the latino votes for trump. it would mean that the voters care more about their personal situation than about the economy, and that they vote rationally instead of emotionally. assuming that trumps remarks about deporting legal immigrants and people eating cats and dogs wouldnt sit well with them, but\n",
-    "this would also point to trumps stuff as rhetoric that he doesnt actually do, but just says for the vibes.\n",
+    "There are, however, other explanations. One of them, having come to my attention through a Mexican person, is that the Democrats deport more than the Republicans. This would make it interesting for Mexicans to vote for Trump, even though he is racist ([Thomas and Wendling, 2024](https://www.bbc.co.uk/news/articles/c77l28myezko)) and one of the central points in his campaign is a suggestion of mass deportation ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record)).\n",
     "\n",
-    "While this is not motivated by academic literature, it is motivated by current events. In fact, understanding something of this, I would argue, is extremely important.\n",
+    "This would also suggest that people care more about material results than the morality of voting for someone who will promote hate against your ethnicity. This has implications about the rationality of voting, and the types of motivation involved in voting - rationality, personal situation. This would also suggest that Trump's rhetoric is less important than the results he delivers.\n",
     "\n",
-    "unauthorized immigration is quite a complicated interdisciplinary problem space. it deals with politics, diplomacy, morality, law, criminality, racism, geopolitcal inequality, resource distribution in policy\n",
+    "Is this supported by the data? Or is it the same case as the economy - that in much the same way that it _feels_ that the Democrats are to blame for inflation, it also _feels_ that they are deporting more?\n",
+    "\n",
+    "Unauthorized immigration is quite a complicated problem space. It is also interdisciplinary, being related politics (election rhetoic), diplomacy (US-Mexico relationship), morality (deportation of criminals), criminality, racism, geopolitical inequality, resource distribution in policy and so on. While this is not motivated by academic literature, it is motivated by current events. In fact, I would argue that understanding this subject better is of extreme importance.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## References:\n",
+    "\n",
+    "([(Debusmann, Halpert and Wendling, 2024](https://www.bbc.co.uk/news/articles/cze3yr77j9wo))\n",
+    "\n",
+    "-   Debusmann Jr, B., Halpert, M., & Wendling, M. (2024, November 7). 'It's simple, really' - why Latinos flocked to Trump's working-class coalition. BBC News.\n",
+    "\n",
+    "([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
+    "\n",
+    "-   Chishti, M., & Bush-Joseph, K. (2024, June 27). The Biden Administration Is on Pace to Match Trump Deportation Numbers—Focusing on the Border, Not the U.S. Interior. Migration Policy Institute.\n",
+    "\n",
+    "([Thomas and Wendling, 2024](https://www.bbc.co.uk/news/articles/c77l28myezko))\n",
+    "\n",
+    "-   Thomas, M., & Wendling, M. (2024, November 16). Trump repeats baseless claim about Haitian immigrants eating pets. BBC News.\n",
+    "\n",
+    "([American Immigration Council, 2024](https://www.americanimmigrationcouncil.org/research/mass-deportation))\n",
+    "\n",
+    "-   American Immigration Council. (2024, October 2). Mass deportation: Devastating costs to America, its budget and economy.\n",
+    "\n",
+    "(_Disclaimer: AI was use to format the references_)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Influential factors\n",
+    "\n",
+    "This is a controversial topic. A lot of it is mired in confusion; some of it is factual, and some of it is normative. Some of this confusion might align with certain incentives.\n",
     "\n",
     "\n",
-    "kind of complicated. \n",
+    "### Factual\n",
     "\n",
-    "-   what is title 42. title 8\n",
-    "-   diff between these terms.\n",
+    "Being a very simple dataset, our analysis cannot account for a lot of factors which influence this issue, such as country of origin, etc. It is also not sensitive to the difference between expulsion and removal. As a primer:\n",
+    "\n",
+    "-   _deportation_ is a colloquial term\n",
+    "-   _repatriation_ is an umbrella term for returns, expulsion and removals\n",
+    "-   _expulsion_ is a special type of removal introduced during the Covid-19 pandemic that bypasses usual immigration and asylum-seeking procedures (a measure which was denounced by human rights institutions).\n",
+    "-   _removal_ is enforced repatriation based on a formal order of removal.\n",
+    "-   _return_ is the departure of a noncitizen \"who has been granted voluntary departure or allowed to withdraw their application for admission at the border...\" ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record)) Around 90% of repatriations are returns. They usually happen on the borders.\n",
+    "\n",
+    "Other confounding factors include ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record)):\n",
+    "\n",
+    "-   Demographic shift in migrant arrivals;\n",
+    "-   Increasing (threefold) the number of migrants;\n",
+    "-   Lack of funding and staff for the US immigration agencies;\n",
+    "-   The difference between interior enforcement and border enforcement and how Biden's shift from the former to the latter;\n",
+    "-   Returns are cheaper to implement;\n",
+    "-   Migrants try to emigrate repeatdly after failed attempts;\n",
+    "-   Logistical unfeasibility of mass deportation ([American Immigration Council, 2024](https://www.americanimmigrationcouncil.org/research/mass-deportation)).\n",
+    "\n",
+    "All of these factors might generate some kind of bias that is unnacounted for in our analysis. This issue is complicated enough that we cannot make specific claims about causality, and, as such, stick to correlation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normative\n",
+    "\n",
+    "We should expect bias, even from 'non-partisan' sources:\n",
+    "\n",
+    "> Whereas President Barack Obama was labeled by some as the “deporter in chief,” this new trend may earn President Joe Biden the title of “returner in chief.” Notably, authorities have deported migrants to more than 170 countries during the current administration, which may be the most ever. ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
+    "\n",
+    "> Although detainer usage under the Biden administration has been rising, overall 50 percent more ICE detainers were issued during the Trump presidency (FY 2017 - FY 2020) ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
+    "\n",
+    "All of this makes it very difficult to answer simple questions such as which administration deports more immigrants. As showcased by the quotes above, we have evidence pointing both ways. Even if we want to answer this in an objective, empirical, data-oriented manner, maybe the data we have comes from sources which have specific interests which might compromise our analysis. \n",
+    "\n",
+    "Nevertheless, we shall try.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Influential factors:\n",
-    "\n",
-    "- Pandemic (title 42 vs title 8)\n",
-    "    - this dataset does not consider the increase in number of migrant processing\n",
-    "    - nor consider the difference between expulsion and removal.\n",
-    "    - this data also does not consider the  \n",
-    "- Confusing terminology (removals, returns, deportations, expulsions, repatriation...) ([Migration Policy Institute, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
-    "    - deportation is a colloquial term\n",
-    "    - repatriation is an umbrella term for returns, expulsion and removals\n",
-    "    - expulsion is a special type of removal under title 42\n",
-    "    - removal is enforced repatriation based on a formal order of removal.\n",
-    "    - return \"The departure out of the United States of a noncitizen who has been granted voluntary departure or allowed to withdraw their application for admission at the border or at a lawful port of entry, such as an airport. Returns typically occur at a U.S. border. Returns can be either enforcement returns, such as of migrants crossing the border irregularly, or administrative returns, such as of migrants who withdraw their applications or foreign crewmembers lacking entry visas who are ordered to stay aboard their ships.\"\n",
-    "- Demographic shift in migrant arrivals ([Migration Policy Institute, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
-    "    - this suggests our analysis of the total population of the country did not reflect this increase.\n",
-    "\n",
-    "- Increasing (threefold) the number of migrants. They were already shortstaffed before.\n",
-    "    - \"From FY 2021 through February 2024, authorities encountered unauthorized migrants about 9.4 million times, more than three times as many as under Trump\" ([Migration Policy Institute, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
-    "- Shift in focus from internal migrants to the border ([Migration Policy Institute, 2024](https://www.migrationpolicy.org/article/biden-deportation-record)). Since resources for agencies are limited, they focus on removing immigrants with criminal records. The shift to the border changes this.\n",
-    "- Returns are cheaper\n",
-    "- around 90% of repatriations are returns. this fits with the literature. \n",
-    "\n",
-    "> To remedy that, a recent bipartisan border bill would have provided DHS with $19 billion for personnel, facilities, and repatriation resources, but these efforts failed after Trump, now the presumptive Republican presidential nominee, expressed disapproval at what seemed to be the prospect of losing a major campaign talking point.\n",
-    "\n",
-    "very interesting! this might explain it. he want it to keep happening so he has atalking point. fixing the problem makes him weaker. much to think about!\n",
-    "\n",
-    "so biden made it harder because of strained resourcers.]\n",
-    "\n",
-    "While in place, the proclamation and rule effectively cap asylum claims, as there are only about 1,450 CBP One appointments available per day. In the weeks following the announcement, authorities doubled the share of border removals, and the number of unauthorized border crossings fell to about 2,400 encounters per day, DHS said, the fewest since Biden took office in January 2021. \n",
-    "\n",
-    "Federal courts in California and Washington, DC blocked a similar Trump administration effort, and rights groups have filed a lawsuit challenging the new rule.\n",
-    "\n",
-    "- migrants try repeatedly\n",
-    "- trump's promise of mass deportation are logistaclly impossible (https://www.americanimmigrationcouncil.org/research/mass-deportation)\n",
-    "\n",
-    "- interior enforcement x border enforcement\n",
-    "\n",
-    "> Although detainer usage under the Biden administration has been rising, overall 50 percent more ICE detainers were issued during the Trump presidency (FY 2017 - FY 2020)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Normative factors\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "this is a controversial topic. between cats and dogs. and some people assuming unauthorized immigration brings crime (which is something trump fosters daily). others see it as discrimination and racism. so it is expected, even from ['non-partisan' sources](https://www.migrationpolicy.org/article/biden-deportation-record), for them to be somewhat biased.\n",
-    "\n",
-    "> Whereas President Barack Obama was labeled by some as the “deporter in chief,” this new trend may earn President Joe Biden the title of “returner in chief.” Notably, authorities have deported migrants to more than 170 countries during the current administration, which may be the most ever.\n",
-    "\n",
-    "But what does The Data say about this?\n",
-    "\n",
-    "Well, the data comes from people who might have interest in deporting.\n",
-    "\n",
-    "this might be a case of 'who is holding the ball when it happens', which is another thing warrants a similar investigation. By looking at the plots, I get the impression that this is a non-partisan issue in the sense that it does not have clear differences between admininstrations. This can also be tested.\n",
-    "\n",
-    "One would imagine the sampling is independent and the frequency is large enough."
    ]
   },
   {
@@ -2319,7 +2317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Between that and the fact that the adjusted metric has a 99% correlation with the original, this line of inquiry is dropped. This suggests the variation of the repatriation data has no relation with the population size of the country."
+    "Between that and the fact that the adjusted metric has a 99% correlation with the original, this line of inquiry is dropped. This suggests the variation of the repatriation data has no relation with the population size of the country.\n"
    ]
   },
   {
@@ -2492,7 +2490,7 @@
    "source": [
     "while this is significant, lets check the most recent administrations (biden, trump, obama and bush) :\n",
     "\n",
-    "/"
+    "/\n"
    ]
   },
   {
@@ -3981,12 +3979,12 @@
     }
    ],
    "source": [
-    "df['returns'].hist();"
+    "df[\"returns\"].hist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4001,12 +3999,12 @@
     }
    ],
    "source": [
-    "df['removals'].hist();"
+    "df[\"removals\"].hist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4021,12 +4019,12 @@
     }
    ],
    "source": [
-    "pg.qqplot(df[\"returns\"]);"
+    "pg.qqplot(df[\"returns\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4041,12 +4039,12 @@
     }
    ],
    "source": [
-    "pg.qqplot(df[\"removals\"]);"
+    "pg.qqplot(df[\"removals\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4097,7 +4095,7 @@
     }
    ],
    "source": [
-    "pg.normality(df['removals'])"
+    "pg.normality(df[\"removals\"])"
    ]
   },
   {
@@ -4153,14 +4151,14 @@
     }
    ],
    "source": [
-    "pg.normality(df['returns'])"
+    "pg.normality(df[\"returns\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These distributions are not normal. So we need to use the [Wilcoxon](https://ethanweed.github.io/pythonbook/05.02-ttest.html#two-sample-wilcoxon-test) test, which is non-parametric (meaning that it does not assume normality). We will also will the two sample one -- called Mann-Whitney, because this is not a paired test."
+    "These distributions are not normal. So we need to use the [Wilcoxon](https://ethanweed.github.io/pythonbook/05.02-ttest.html#two-sample-wilcoxon-test) test, which is non-parametric (meaning that it does not assume normality). We will also will the two sample one -- called Mann-Whitney, because this is not a paired test.\n"
    ]
   },
   {
@@ -4698,6 +4696,17 @@
    "metadata": {},
    "source": [
     "## Conclusion\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One alternative explanation that the literature provides is this:\n",
+    "\n",
+    "> ...a recent bipartisan border bill would have provided DHS with $19 billion for personnel, facilities, and repatriation resources, but these efforts failed after Trump, now the presumptive Republican presidential nominee, expressed disapproval at what seemed to be the prospect of losing a major campaign talking point. ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
+    "\n",
+    "This makes it sound like Trump has no interest in \"fixing\" the issue of unauthorized immigration since it is one of the talking points of his campaign. This might help explain the paradoxical nature of why a candidate who talks so much about immigration would actually deport less."
    ]
   }
  ],
