--- a/M7002_assessment2_24000114067.ipynb
+++ b/M7002_assessment2_24000114067.ipynb
@@ -32,9 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Less than a month ago, Trump won the United States election. A surprising contingent of black and latino citizens voted for him. The explanation seems to be \"the economy\" $-$ prices are rising and the ones in power happen to be the Democrats, and so they are being blamed for it ([Debusmann, Halpert and Wendling, 2024](https://www.bbc.co.uk/news/articles/cze3yr77j9wo)). People are voting for Trump $-$ despite his personality and beliefs $-$ because he is not a Democrat.\n",
+    "Less than a month ago, Trump won the United States election. A surprising contingent of black and latino citizens voted for him. The explanation seems to be \"the economy\" $-$ prices are rising and the ones in power happen to be the Democrats, and so they are being blamed for it ([Debusmann, Halpert & Wendling, 2024](https://www.bbc.co.uk/news/articles/cze3yr77j9wo)). People are voting for Trump $-$ despite his personality and beliefs $-$ because he is not a Democrat.\n",
     "\n",
-    "There are, however, other explanations. One of them, having come to my attention through a Mexican friend, is that the Democrats deport more than the Republicans. This would make it interesting for Mexicans to vote for Trump, even though he is racist ([Thomas and Wendling, 2024](https://www.bbc.co.uk/news/articles/c77l28myezko)) and one of the central points in his campaign is a suggestion of mass deportation ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record)).\n",
+    "There are, however, other explanations. One of them, having come to my attention through a Mexican friend, is that the Democrats deport more than the Republicans. This would make it interesting for Mexicans to vote for Trump, even though he is racist ([Thomas & Wendling, 2024](https://www.bbc.co.uk/news/articles/c77l28myezko)) and one of the central points in his campaign is a suggestion of mass deportation ([Chishti & Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record)).\n",
     "\n",
     "It this is the case, it would also suggest that people care more about material results than the morality of voting for someone who will promote hate against your ethnicity.\n",
     "Understanding this phenomenon would help us understand the types of motivation involved in voting: rationality of behaviour, the weight of the voters' personal situation compared to ideological disputes, and so on. This might also suggest that Trump's rhetoric is less important than the results he delivers.\n",
@@ -82,9 +82,9 @@
     "\n",
     "This is a controversial topic. As such, bias and confusion is to be expected.\n",
     "\n",
-    "> Whereas President Barack Obama was labeled by some as the “deporter in chief,” this new trend may earn President Joe Biden the title of “returner in chief.” Notably, authorities have deported migrants to more than 170 countries during the current administration, which may be the most ever. ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
+    "> Whereas President Barack Obama was labeled by some as the “deporter in chief,” this new trend may earn President Joe Biden the title of “returner in chief.” Notably, authorities have deported migrants to more than 170 countries during the current administration, which may be the most ever. ([Chishti & Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
     "\n",
-    "> Although detainer usage under the Biden administration has been rising, overall 50 percent more ICE detainers were issued during the Trump presidency (FY 2017 - FY 2020) ([Chishti and Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
+    "> Although detainer usage under the Biden administration has been rising, overall 50 percent more ICE detainers were issued during the Trump presidency (FY 2017 - FY 2020) ([Chishti & Bush-Joseph, 2024](https://www.migrationpolicy.org/article/biden-deportation-record))\n",
     "\n",
     "All of this makes it very difficult to answer simple questions such as which administration deports more immigrants. As showcased by the quotes above, there are ways to argue for both. Even if we want to answer this in an objective, empirical, data-oriented manner, the data we have come from sources which have interests which might compromise our analysis. Nevertheless, we shall try.\n"
    ]
@@ -6580,7 +6580,7 @@
     "\n",
     "The regression modelling on the whole dataset corroborates these findings.\n",
     "\n",
-    "When considering a segment of the last 20 years of data, we have complex results (as per the table in the previous section). Much like the literature on the topic, different models point in different directions. The presidency feature points in different directions if considering removals or returns. As such, we would conclude there is, again, **no obvious difference between the party of the president and deportation rates**. However, (**the majority Democrat house seems a good predictor for increased deportation**), explaining around 20% of the variance.\n"
+    "When considering a segment of the last 20 years of data, we have complex results (as per the table in the previous section). Much like the literature on the topic, different models point in different directions. The presidency feature points in different directions if considering removals or returns. As such, we would conclude there is, again, **no obvious difference between the party of the president and deportation rates**. However, (**the majority Democrat house seems a good predictor for increased deportation**), explaining around 20% of the variance."
    ]
   },
   {
@@ -6594,13 +6594,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Regarding our original question, the data we obtained suggests that **there is no diference in deportation between the Democratic and Republican party**. This finding might be either surprising or obvious depending on your political affiliation. Considering how much Trump talks about the issue of undocumented immigrants, one would expect him to be doing something about it. Considering how they act as if they are different parties, one would expect some kind of difference of behaviour between them. We can consider this plausible in light of the comments regarding how the \"left-leaning\" US party, when considered in the context of other leftist parties, is considerably less radical than its peers.\n",
+    "Regarding our original question, the data we obtained suggests that **there is no diference in deportation between the Democratic and Republican party**. However, if we just consider the last 20 years, there is a correlation between a Democratic house majority and an increase in deportation. While this might be possibly scientifically relevant, a house majority is not what people usually mean when they talk about political parties.\n",
+    "\n",
+    "This finding might be either surprising or obvious depending on your political affiliation. Considering how much Trump talks about the issue of undocumented immigrants, one would expect him to be doing something about it. Considering how they act as if they are different parties, one would expect some kind of difference of behaviour between them. We can consider this plausible in light of the comments regarding how the \"left-leaning\" US party, when considered in the context of other leftist parties, is considerably less radical than its peers.\n",
     "\n",
     "While this analysis was limited by the amount of test assumptions that were not fulfilled, we can be fairly confident in accepting the null hypothesis for most of the research questions we formulated. The only exception, which was outside the initial scope of the project, was the `government` variable. It represents whether governments are united or divided $-$ that is, if the president's party holds majority in both chambers. It seems that **governments which are divided return more unauthorized immigrants**.\n",
     "\n",
-    "If we just consider the last 20 years, however, ...\n",
-    "\n",
-    "The difference in correlation and causation is especially important here where it is way too easy to say there is a difference. This finding can be used to say things like 'governments should be united', which would be an incorrect conclusion. The may be many confounding variables: maybe united governments happen in periods of progress or prosperity, or they are united because they have exceptionally good leaders. This simple correlational quantitative analysis might be enlightening in some way, but it is not enough to make grand claims about the political landscape of the US. This can be a good starting point for a more sophisticated analysis, but it does not substitute one.\n"
+    "The difference in correlation and causation is especially important here where it is way too easy to say there is a difference. This finding can be used to say things like 'governments should be united', or 'a Democrat house causes more immigration', which would be an incorrect conclusion. The may be many confounding variables: maybe united governments happen in periods of progress or prosperity, or they are united because they have exceptionally good leaders. This simple correlational quantitative analysis might be enlightening in some way, but it is not enough to make grand claims about the political landscape of the US. This can be a good starting point for a more sophisticated analysis, but it does not substitute one."
    ]
   },
   {
